deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: trifueling
  labels:
    app: trifueling
spec:
  selector:
    app: trifueling
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
